# opensearch-mcp-server

./: README.md  pyproject.toml
configs/indices/: context_store.yaml  test_index.yaml
src/opensearch_mcp_server/: server.py
src/opensearch_mcp_server/tools/: document.py  index.py  memory.py
src/opensearch_mcp_server/utils/: config.py  embeddings.py
tests/: test_configure_indexes.py  test_configure_indices_unit.py
