[project]
name = "opensearch-mcp-server"
version = "1.0.1"
description = "MCP Server for interacting with OpenSearch with vector search capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opensearch-py>=2.3.1,<3.0.0",  # Updated to ensure compatibility with vector search
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=0.4.0",
    "numpy>=1.24.0",  # For vector operations
    "sentence-transformers>=2.2.2",  # For generating text embeddings
    "tqdm>=4.66.0",  # For progress bars during migration
    "pydantic>=2.0.0,<3.0.0",  # For data validation
]

[project.license]
file = "LICENSE"

[project.scripts]
opensearch-mcp-server = "opensearch_mcp_server:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
